# RP2040-HAT-C_SPI_TEST

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/loopback/: w5x00_loopback.c
port/: CMakeLists.txt
port/ioLibrary_Driver/inc/: w5x00_spi.h  wiznet_spi_pio.h
port/ioLibrary_Driver/src/: w5x00_spi.c  wiznet_spi_pio.c  wiznet_spi_pio.pio
